# assimilate

./: .dockerignore  .env.example  .gitignore  .jscpd.json  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .reuse.toml  .rustfmt.toml  .yamlfmt  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.agent  Dockerfile.server  LICENSE  README.md  REUSE.toml  clippy.toml  deny.toml  docker-compose.yml  docker-entrypoint.sh  excludes.common  excludes.local.example  mkdocs.yml  opencode.json  ruff.toml
.devcontainer/: Dockerfile.dev  borg-dev.sh  dev-init.sh  devcontainer.json  docker-compose.dev.yml  start.sh
.reuse/: dep5  styles.toml
.sqlx/: .gitkeep  query-007876bf7573f77504cf26e2e543470f46eeb7bbd10cf967e2545b9266638015.json  query-011fc819ceb24cd3b75cef7787a5f60459ba505fb2f7e524b3f63e192e7e8b1e.json  query-023399016ae13e15ec5db3fd28651281473b3b2f650e3b801643ffc0f19aa072.json  query-023c8c5f58e1340fc57cf0c28d0c083c4708c7988f76f5c7f6a14108f850cb7e.json  query-02529f1667c40802221ebd9ef4c0b8ae24b23b2b2b82d45e19a686c990a7cafc.json  query-02ba0cf54d629f7b90abf0886c0d25522bca4668255b0b1468057274b5a993c1.json  query-045d897a0e345869e87664aa2a4f417f3de960b82547e0b36ea69f2cf8cf030b.json  query-04eb67fa7c230283d403c3029d138aaa26ee56d560a1ffcd2484bd9eafaf691b.json  query-07475350e373948a3a5bb454e51c83a5d01531b85492171ecb091b6eabdf99df.json  query-0826bfff8c72f600d51c894612f59231b43f091e67e9d60b5e272db77e78c530.json  query-089adfe79eda5c00077da522b7b08b98d80af72932d40895a0863249164bac01.json  query-089d88d24b09a37fd611cb10b69e6ad3b577d7d3b9bba3db28b747f91dfdc524.json  query-08faaa6451af40a483b5e37c26e6ac41ce360ffeca0b466dfa0ad32928796fc3.json  query-096a0145ed09ddfb6d0364bf494ba6791e30a1091aed2436427c4806979a5909.json  query-09f9a6e5d44bc9d6aa984749687c0159acd70948cd062a7f705419cca3bff728.json  query-0a5f375c234ebcdce4ae16cb6b435359e97b3af657c5f1220080970bfd2d90f0.json  query-0b55990cf6dacec2c34e467baab86f4327cca5834794186357988951a7e1c412.json  query-0b75643ec3e46319d47383fe24da09029bb7e7eea710356d1fde484948fbcb1e.json  query-0c9e4b8fa8d9fd5e66fa1a955796b819e922f9c43788c7a8262892c3f65aa05a.json  query-0ce934f84bb78507540acb1bcff85f5dd7dbd82be4e905bb3e113a45df6cdc4a.json  query-0d44ccb21b6dc739657f8605a9fffad82f87a7f354814f4a1c42355d9aff97bf.json  query-0d50c8c90df15e10570ad2db0501065f4cde48058aa9050956e21052dfc690c1.json  query-0e1d266252a78383798934e8a158c59787d74ce714efb46147c640f95723827f.json  query-0f9685ee17b0adae3acac38e5c5568117557ce2aff91777bc1cb09ebec9f5c0d.json  query-0fb8eb9a5b2e6ee1db27de57adca6e82dd22c37e0e07276fff57ed5f202f9737.json  query-0fe1a444438eac4ee9c1037d6883535d592c28e4a5f8ac04a45cb297e73f6be5.json  query-114dc8eecd3853345185a84595ed03dcfe89688ea7fc6931fdc55c423e973e4e.json  query-11819489bf2e0118b60d1f5a6c6ea875ac13dd1db99d9106e1ad34a9ee8116bf.json  (+385 more)
crates/agent/: Cargo.toml  build.rs
crates/agent/src/: backup.rs  borg.rs  executor.rs  main.rs  ssh_forward.rs  systemd.rs  task_registry.rs  ws.rs
crates/server/: Cargo.toml  build.rs
crates/server/migrations/: 0001_schema.sql  0002_notifications.sql  0003_notification_scope.sql  0004_archive_tags.sql  20260530093601_audit_log.sql  20260530100000_repo_quotas.sql  20260530120000_schedule_rate_limit.sql  20260530130000_drop_schedule_unique_cron.sql  20260530140000_repo_importing.sql  20260530150000_repo_import_error.sql  20260530160000_hostname_patterns.sql  20260530170000_repo_sync.sql  20260530180000_repo_relocation_pending.sql  20260530190000_backup_reports_archive_name.sql  20260531100000_agent_build_info.sql  20260531120000_per_host_backup_sources.sql  20260531130000_add_client_is_hidden.sql  20260531140000_per_host_excludes.sql  20260531150000_schedule_name.sql  20260601100000_repo_sync_schedule.sql  20260601110000_repo_import_progress.sql  20260601120000_repo_import_status.sql  20260603100000_excludes_raw_text.sql  20260604100000_backup_reports_repo_unique_csize.sql  20260604110000_schedule_repo_nullable.sql  20260604120000_backup_reports_borg_command.sql  20260604130000_backup_reports_schedule_id.sql  20260604140000_schedules_keep_hourly.sql  20260604150000_schedule_ignore_changed_files.sql  20260605100000_archive_index.sql  20260605120000_schedule_canary_paths.sql  20260607120000_repo_ssh_host_key.sql  20260607130000_archive_paths.sql  20260608100000_schedules_remove_parallel.sql  20260608110000_backup_reports_run_id.sql  20260609100000_repo_last_op.sql  20260609110000_dismissed_dashboard_findings.sql  20260610100000_rename_clients_to_agents.sql  20260610120000_backup_reports_archive_dedup.sql  20260611100000_archive_index_normalize.sql  (+21 more)
crates/server/src/: archive_index.rs  background_tasks.rs  borg.rs  client_ip.rs  config_assembler.rs  cookies.rs  db.rs  error.rs  lib.rs  log_buffer.rs  main.rs  middleware.rs  openapi.rs  quota_enforcement.rs  rate_limit.rs  repo_op_tracker.rs  scheduler.rs  ssh.rs  tunnel.rs
crates/server/src/api/: agents.rs  archives.rs  audit.rs  auth.rs  clients.rs  config_io.rs  deploy.rs  diff.rs  dryrun.rs  excludes.rs  export.rs  health.rs  helpers.rs  keys.rs  logs.rs  mod.rs  notifications.rs  permissions.rs  quota.rs  rbac.rs  reports.rs  repos.rs  restore.rs  schedules.rs  search.rs  server_quotas.rs  ssh.rs  stats.rs  system.rs  tags.rs  tokens.rs  totp.rs  tunnels.rs  users.rs
crates/server/src/db/: audit.rs  dashboard.rs  mod.rs  patterns.rs  quota.rs  server_quota.rs  tags.rs
crates/server/src/notifications/: email.rs  mod.rs  net.rs  web_push.rs  webhook.rs
crates/server/src/ws/: completion_bus.rs  handler.rs  mod.rs  registry.rs  ssh_relay.rs  ui_broadcast.rs  ui_handler.rs
crates/server/tests/: db_queries.rs  integration.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/src/: borg.rs  crypto.rs  lib.rs  protocol.rs  responses.rs  schedule.rs  ssh.rs  task_registry.rs  types.rs
docs/: access-control.md  activity.md  (+26 more)
lints/no_string_control_flow/: .gitignore  Cargo.toml  README.md
lints/no_string_control_flow/.cargo/: config.toml
lints/no_string_control_flow/src/: lib.rs
lints/no_string_control_flow/ui/: main.rs  main.stderr
(+308 files in other folders)
