# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Alexander Mohr

[workspace]
members = ["crates/server", "crates/agent", "crates/shared"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "macros", "chrono", "uuid"] }
aes-gcm = "0.10"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
tokio-tungstenite = "0.26"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
bcrypt = "0.16"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
clap = { version = "4", features = ["derive", "env"] }
gethostname = "0.5"
tempfile = "3"
russh = "0.61"
russh-sftp = "2.3"
croner = "2"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
clone_on_ref_ptr = "deny"
similar_names = "allow"
indexing_slicing = "deny"
unwrap_used = "deny"
arithmetic_side_effects = "deny"
separated_literal_suffix = "deny"
