# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Alexander Mohr

[workspace]
members = ["crates/server", "crates/agent", "crates/shared"]
resolver = "2"

[workspace.metadata.dylint]
libraries = [{ path = "lints/no_string_control_flow" }]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "macros", "chrono", "uuid"] }
aes-gcm = "0.10"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
bcrypt = "0.16"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io", "io-util"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
clap = { version = "4", features = ["derive", "env"] }
gethostname = "0.5"
tempfile = "3"
russh = "0.61"
russh-sftp = "2.3"
croner = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1", "tokio1-rustls", "ring", "rustls-native-certs"] }
web-push = "0.11"
p256 = { version = "0.13", features = ["ecdsa"] }
base64 = "0.22"
glob-match = "0.2"
which = "7"
ssh-key = { version = "0.6", features = ["ed25519", "std", "rand_core"] }
lz4_flex = "0.11"
nix = { version = "0.29", features = ["signal", "process"] }
ipnetwork = "0.20"
strum = "0.26"
strum_macros = "0.26"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
clone_on_ref_ptr = "deny"
similar_names = "allow"
indexing_slicing = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
allow_attributes_without_reason = "deny"
arithmetic_side_effects = "deny"
separated_literal_suffix = "deny"
disallowed_methods = "deny"
