# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Alexander Mohr

[package]
name = "agent"
version = "0.1.0"
edition = "2024"
publish = false
description = "Agent binary that runs on backup machines and connects to the Assimilate server"
license = "Apache-2.0"
repository = "https://github.com/alexmohr/assimilate"
authors = ["Alexander Mohr"]

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
gethostname = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
which = { workspace = true }
rustls = { workspace = true }
nix = { workspace = true }
glob-match = { workspace = true }
shared = { path = "../shared" }

[build-dependencies]
chrono = { workspace = true }
