# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Alexander Mohr

[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = false
description = "Axum-based HTTP and WebSocket server for Assimilate backup management"
license = "Apache-2.0"
repository = "https://github.com/alexmohr/assimilate"
authors = ["Alexander Mohr"]

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
bcrypt = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
tower-http = { workspace = true }
sha2 = { workspace = true }
russh = { workspace = true }
russh-sftp = { workspace = true }
ssh-key = { workspace = true }
lz4_flex = { workspace = true }
rustls = { workspace = true }
shared = { path = "../shared" }
reqwest = { workspace = true }
lettre = { workspace = true }
web-push = { workspace = true }
isahc = "1"
p256 = { workspace = true }
base64 = { workspace = true }
glob-match = { workspace = true }
ipnetwork = { workspace = true }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.1"
utoipa-scalar = { version = "0.3", features = ["axum"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = { workspace = true }

[build-dependencies]
chrono = { workspace = true }
