# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Alexander Mohr

[workspace]

[package]
name = "no_string_control_flow"
version = "0.1.0"
authors = ["Alexander Mohr"]
description = "Denies control flow (if/match) driven by string literal comparisons"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "9fca3bc9fc2bc83c60bde26d18ed68f11564b228" }
dylint_linting = "6"

[dev-dependencies]
dylint_testing = "6"

[package.metadata.rust-analyzer]
rustc_private = true
